2007-12-23  Aidan Kehoe  <kehoea@parhasard.net>

	* objects-tty.c (tty_find_charset_font): 
	* objects-msw.c (mswindows_font_spec_matches_charset_stage_2):
	* objects-msw.c (mswindows_font_spec_matches_charset_stage_1):
	* objects-xlike-inc.c (x_font_spec_matches_charset): 
	* objects-xlike-inc.c (gtk_font_spec_matches_charset):
	If the charset is not specified when calling the
	font_spec_matches_charset device method, its value is Qnil, not
	Qunbound. See
	http://mid.gmane.org/E1EfbmW-00029r-5G@iwi191.iwi.uni-sb.de and
	Ben Wing's patch of
	http://mid.gmane.org/439FA06B.3090007@xemacs.org. 

2007-12-22  Aidan Kehoe  <kehoea@parhasard.net>

	* database.c (Fopen_database):
	Actually respect the CODESYS argument; don't require EOL
	autodetection from the coding system, because autodetection mostly
	fails with reads of small amounts of data. It might be possible
	with an implicit #'map-database on open, though I don't think
	that's a great idea.
	* database.c (print_database):
	Give the coding system used for text conversion when printing a
	database object. 

2007-12-20  Jerry James  <james@xemacs.org>

	* sound.c: Fix unused parameter warnings when HAVE_ALSA_SOUND.

2007-12-18  Kenny Chien <Kenny.Chien@morganstanley.com>

	* extw-Xt.c (extw_wait_for_response): Don't use undocumented
	internal Xt functions, avoiding inconsistent behavior between
	different Solaris versions.

2007-12-18  Aidan Kehoe  <kehoea@parhasard.net>

	* symbols.c (Fspecial_form_p):
	Following commentary from Jerry James, don't error if not passed a
	subr. 

	Flesh out the docstring; give details of what a subr is, what a
	special form is, and why one should probably not write special
	forms oneself. 

2007-12-18  Aidan Kehoe  <kehoea@parhasard.net>

	* symbols.c (Fspecial_form_p): New.
	For the use of advice.el, and perhaps other files; is SUBR a
	special form?

2007-12-17  Aidan Kehoe  <kehoea@parhasard.net>

	* doprnt.c (emacs_doprnt_1):